--- a/CSS/stylehamburger.css
+++ b/CSS/stylehamburger.css
@@ -14,7 +14,7 @@ scroll-behavior: smooth;
     box-sizing: border-box;
 }
 
-:root{
+:root {
     /* Son variables que se crean, porque los vas a utilizar siempre en la web, como el color principal, la fuente etc... */
     --color-principal: #fa573a;
     --color-secundario: #21242e;
@@ -23,9 +23,10 @@ scroll-behavior: smooth;
     --fontsize: 1em;
     --anchomaximo: 68.750em;
     --margingrip: 1em;
+    --padding: 0.625em;
 }
 /* Esto es para hacer que las imágenes se escalen, con referencia a el responsive que tengas en cada momento. */
-img{
+img {
     width: 100%;
     height: auto;
     display: block;
@@ -40,3 +41,95 @@ body {
     max-width: var(--anchomaximo);
     margin: 0 auto;
 }
+
+/* INICIO HEADER */
+
+header .nav-top {
+    background-color: var(--color-secundario);
+    padding: calc(var(--margingrip)*2) 0px;
+}
+
+header .nav-top .container {
+display: flex;
+justify-content: space-around;
+}
+
+header .nav-top a {
+    color: var(--color-principal);
+    text-decoration: none;
+}
+
+header .nav-top a span {
+    display: none;
+}
+
+header .nav-top a i {
+    font-size: 150%;
+}
+
+header nav{
+    padding: calc(var(--padding) * 2);
+}
+
+header nav .container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+header nav .logo img {
+    max-width: 6.250em;
+}
+
+header nav .hamburguesa {
+    /* cursor: pointer; Hace que un enlace se convierta en clicable, y por tanto cambie el icono del ratón por la mano */
+    cursor: pointer;
+}
+
+header nav .hamburguesa div {
+    border-bottom: 2px solid #aaa;
+    margin-bottom: var(--padding);
+    width: 1.875em;
+}
+
+header nav ul {
+    width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* FINAL HEADER */
+
+
+/* Las mediaqueries las dejamos al final de CSS style o en otro archico de CSS */
+
+@media(min-width: 600px){}
+
+@media(min-width: 768px){
+    header .nav-top a span {
+        display: inline;
+        color:#ffffff;
+        font-size: 120%;
+        margin-left: 5px;
+    }
+
+}
+
+@media(min-width: 1004px){}
