--- a/CSS/stylehamburger.css
+++ b/CSS/stylehamburger.css
@@ -96,9 +96,24 @@ header nav ul {
     width: 100%;
 }
 
+header nav .menu li a {
+    display: block;
+    width: 100%;
+    text-decoration: none;
+    text-align: center;
+    padding: calc(var(--padding)*2);
+    color: #aaa;
+    border-bottom: 1px solid #aaa;
+}
 
+header nav .menu li:last-child a {
+    border-bottom: 0;
+}
 
-
+header nav .menu li a.activo, header nav .menu li a:hover{
+    color: var(--color-principal);
+}
+r
 
 
 
@@ -123,7 +138,7 @@ header nav ul {
 @media(min-width: 600px){}
 
 @media(min-width: 768px){
-    header .nav-top a span {
+    header.nav-top a span {
         display: inline;
         color:#ffffff;
         font-size: 120%;
@@ -132,4 +147,24 @@ header nav ul {
 
 }
 
-@media(min-width: 1004px){}
+@media(min-width: 1004px){
+    header nav .hamburguesa div {
+        display: none;
+    }
+    header nav ul {
+        width: auto;
+    }
+    header nav .menu li {
+        display: inline-block;
+    }
+
+    header nav .menu li a {
+        padding: 0.5em var(--padding) ;
+        border-bottom: none;
+    }
+
+    header {
+        box-shadow: 0px 2px 10px grey;
+
+    }
+}
