--- a/CSS/stylehamburger.css
+++ b/CSS/stylehamburger.css
@@ -113,24 +113,56 @@ header nav .menu li:last-child a {
 header nav .menu li a.activo, header nav .menu li a:hover{
     color: var(--color-principal);
 }
-r
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* FINAL HEADER */
+
+/* INICIO FOOTER */
+footer{
+    background-color: var(--color-secundario);
+    padding: calc(var(--padding) *2 ) 0px;
+    color:white;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+footer a {
+    color:white;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: var(--color-principal);
+}
+
+.flecha a {
+    display: block;
+    color:var(--color-principal);
+    position: fixed;
+    bottom: 70px;
+    right: 20px;
+    font-size: 300%;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ /* FINAL FOOTER */
 
 
 /* Las mediaqueries las dejamos al final de CSS style o en otro archico de CSS */
@@ -165,6 +197,11 @@ r
 
     header {
         box-shadow: 0px 2px 10px grey;
+        /* Esto es para dar una profundidad y sombra a todo */
 
+    }
+
+    footer {
+        text-align: left;    
     }
 }
