--- a/CSS/stylehamburger.css
+++ b/CSS/stylehamburger.css
@@ -218,19 +218,81 @@ footer a:hover {
 }
  /* FINAL HERO */
 
+ /* INICIO DE MAIN - OUR SERVICES */
+
+main section {
+    padding: 2.125em 1.5em;
+}
+
+main section h2 {
+    color: #000000;
+    font-family: var(--fuente-secundaria);
+    font-size: 2em;
+    text-align: center;
+}
+
+main section h2 span {
+    color: var(--color-principal);
+}
+
+main section .underline {
+    position: relative;
+    width: 6.250em;
+    margin: 0 auto;
+    color: var(--color-principal);
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: calc(var(--margingrip)*1.5);
+}
+
+main section .underline hr {
+    position: absolute;
+    width: 100%;
+    top: -1px;
+    border-color: var(--color-principal);
+
+}
+
+main #ourservice .grid {
+    display: grid;
+    gap: var(--margingrip);
+
+}
+
+
+
+
+
+
+
+ /* FINAL DE MAIN - OUR SERVICES */
 
 /* Las mediaqueries las dejamos al final de CSS style o en otro archico de CSS */
 
-@media(min-width: 600px){}
+@media( min-width: 600px) {
+    main #ourservice .grid {
+    grid-template-columns: repeat(2, 1fr);
+    }
 
-@media(min-width: 768px){
+    main #ourservice .grid article:last-child {
+    grid-column: 1 /3;
+    }
+}
+
+@media( min-width: 768px) {
     header .nav-top a span {
         display: inline;
         color:#ffffff;
         font-size: 120%;
         margin-left: 5px;
     }
+    main #ourservice .grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
 
+    main #ourservice .grid article:last-child {
+        grid-column: 3 / 4;
+    }
 }
 
 @media(min-width: 1004px){
