--- a/CSS/stylehamburger.css
+++ b/CSS/stylehamburger.css
@@ -320,8 +320,26 @@ main #ourservice article>div .fas {
       flex-direction: column;
   }
 
+  main .imagen .marco {
+      border: 4px solid var(--color-principal);
+      transform: rotateZ(10deg);
+      transition: 1s;
+  }
 
-  /* FINAL DE MAIN - ABOUT US */
+  main .imagen .marco img {
+    transform: rotateZ(-10deg);
+    transition: 1s;
+  }
+
+  main .imagen:hover .marco {
+    transform: rotateZ(0deg);
+  }
+
+  main .imagen:hover .marco img {
+    transform: rotateZ(0deg);
+  }
+
+/* FINAL DE MAIN - ABOUT US */
 
 /* Las mediaqueries las dejamos al final de CSS style o en otro archico de CSS */
 
