Añadir las hojas CSS de Blog + Menú

--- a/CSS/stylemenu.css
+++ b/CSS/stylemenu.css
@@ -47,6 +47,7 @@ body {
     margin: 0 auto;
 }
 
+
 /* INICIO HEADER */
 
 header .nav-top {
@@ -151,87 +152,28 @@ footer a:hover {
 }
  /* FINAL FOOTER */
 
- /* INICIO HERO */
-.hero {
-    background-image: url(../images/images/fondo.jpg);
-    height: 60vh;
-    /* Esta etiqueta es pasa centrar la imagen */
-    background-image: center center;
-    /* Esto es para que en imagenes más pequeñas que la imagen, no se repita, y asó solo se ve una vez */
-    background-repeat: no-repeat;
-    /*  background-size: cover;
-    esto es para qué nunca se deforme la imagen*/
-    background-size: cover;
-    color: white;
-    display: flex;
-    background-color:#777;
-    background-blend-mode:multiply;
-}
-.hero .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 90%;
+  /* INICIO de MAIN - MENÚ - Sección Todays Menú*/
+main #todaysmenu {
+    background-color: var(--color-secundario);
 }
 
-.hero h1 {
+main #todaysmenu2 div.container {
+    color: #ffffff;
     font-family: var(--fuente-secundaria);
-    font-size: 2.25em;
-}
-
-.hero h2 {
-    color: var(--color-principal);
-    font-size: 1.25em;
-    margin: var(--margingrip) 0px;
-}
-
-.hero p {
-    font: 1.15em;
-}
-
-.hero .social li {
-    display: inline-block;
-    margin-right: var(--margingrip);
     font-size: 2em;
+    text-align: right;
 }
 
-.hero .social li a {
-    color: white;
-}
-
-.boton{
-    background-color: var(--color-principal);
-    color: white;
-    display: inline-block;
-    padding: 1.15em;
-    margin: var(--margingrip) 0px;
-    text-decoration: none;
-    border: 1px solid var(--color-principal);
-}
-
-.boton:hover {
-    background-color: transparent;
-    border: 1px solid var(--color-principal);
-    color: var(--color-principal);
-}
-
-/* Lo qué le estoy diciendo es que esto se mueva */
-.boton:hover i {
-    transform: translateX(5px);
-    transition: 0.5s;
-
-}
- /* FINAL HERO */
 
 
- /* INICIO DE MAIN - OUR SERVICES */
+ /* INICIO DE MAIN - TODAYSMENU */
 
 main section {
     padding: 2.125em 1.5em;
 }
 
 main section h2 {
-    color: #000000;
+    color: #ffffff;
     font-family: var(--fuente-secundaria);
     font-size: 2em;
     text-align: center;
@@ -300,114 +242,23 @@ main #ourservice article>div .fas {
 
 .fa-truck {
     transform: rotateY(180deg);
-}
 
- /* FINAL DE MAIN - OUR SERVICES */
-
-
-  /* INICIO DE MAIN - ABOUT US */
-
-  main section:last-child {
-      padding-bottom: 90px;
-  }
-
-  main section h4 {
-      margin: var(--margingrip) 0;
-      color: var(--color-principal);
-  }
-
-  main section .flexbox {
-      display: flex;
-      flex-direction: column;
-  }
-
-  main .imagen .marco {
-      border: 4px solid var(--color-principal);
-      transform: rotateZ(10deg);
-      transition: 1s;
-  }
-
-  main .imagen .marco img {
-    transform: rotateZ(-10deg);
-    transition: 1s;
-  }
-
-  main .imagen:hover .marco {
-    transform: rotateZ(0deg);
-  }
-
-  main .imagen:hover .marco img {
-    transform: rotateZ(0deg);
-  }
-
-/* FINAL DE MAIN - ABOUT US */
-
-/* Las mediaqueries las dejamos al final de CSS style o en otro archico de CSS */
-
-@media( min-width: 600px) {
-    main #ourservice .grid {
-    grid-template-columns: repeat(2, 1fr);
-    }
-
-    main #ourservice .grid article {
-        border-bottom: none;
-        border-left: 1px solid #aaa;
-        padding: 1.5em;
-    }
-
-    main #ourservice .grid article:last-child {
-    grid-column: 1 /3;
-    }
-
-    main section .flexbox {
-        flex-direction: row;
-    }
-
-    main section .flexbox .columna {
-        margin: 0 var(--margingrip);
-    }
-}
-
-@media( min-width: 768px) {
-    header .nav-top a span {
-        display: inline;
-        color:#ffffff;
-        font-size: 120%;
-        margin-left: 5px;
-    }
-    main #ourservice .grid {
-        grid-template-columns: repeat(3, 1fr);
-    }
-
-    main #ourservice .grid article:last-child {
-        grid-column: 3 / 4;
-    }
 }
 
 
-@media(min-width: 1004px){
-    header nav .hamburguesa div {
-        display: none;
-    }
-    header nav ul {
-        width: auto;
-    }
+/*INICIO MAIN - TODAYS MENÚ*/
 
-    header nav .menu li {
-        display: inline-block;
-    }
+main section #todaysmenu2 ul:hover {
+    background-color: var (var(--color-principal));
+    display: block;
+    width: 100%;
+    text-decoration: none;
+    text-align: center;
+    padding: calc(var(--padding)*2);
+    color: #aaa;
+    border-bottom: 1px solid #aaa;;
+}
 
-    header nav .menu li a {
-        padding: 0.5em var(--padding) ;
-        border-bottom: none;
-    }
-
-    header {
-        box-shadow: 0px 2px 10px grey;
-        /* Esto es para dar una profundidad y sombra a todo */
-    }
-
-    footer {
-        text-align: left;    
-    }
+main section article {
+    color: white;
 }
